--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build",
+    "db": "json-server --watch db.json --port 8000"
   },
   "eslintConfig": {
     "extends": "react-app"
